; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-sa1100/extr_simpad.c_simpad_uart_pm.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-sa1100/extr_simpad.c_simpad_uart_pm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_port = type { i64 }

@Ser1UTCR0 = common dso_local global i32 0, align 4
@RS232_ON = common dso_local global i32 0, align 4
@DECT_POWER_ON = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uart_port*, i64, i64)* @simpad_uart_pm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @simpad_uart_pm(%struct.uart_port* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.uart_port*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.uart_port* %0, %struct.uart_port** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.uart_port*, %struct.uart_port** %4, align 8
  %8 = getelementptr inbounds %struct.uart_port, %struct.uart_port* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp eq i64 %9, ptrtoint (i32* @Ser1UTCR0 to i64)
  br i1 %10, label %11, label %25

11:                                               ; preds = %3
  %12 = load i64, i64* %5, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %11
  %15 = load i32, i32* @RS232_ON, align 4
  %16 = call i32 @simpad_clear_cs3_bit(i32 %15)
  %17 = load i32, i32* @DECT_POWER_ON, align 4
  %18 = call i32 @simpad_clear_cs3_bit(i32 %17)
  br label %24

19:                                               ; preds = %11
  %20 = load i32, i32* @RS232_ON, align 4
  %21 = call i32 @simpad_set_cs3_bit(i32 %20)
  %22 = load i32, i32* @DECT_POWER_ON, align 4
  %23 = call i32 @simpad_set_cs3_bit(i32 %22)
  br label %24

24:                                               ; preds = %19, %14
  br label %25

25:                                               ; preds = %24, %3
  ret void
}

declare dso_local i32 @simpad_clear_cs3_bit(i32) #1

declare dso_local i32 @simpad_set_cs3_bit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
